--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^11.0.2",
     "lz-string": "^1.5.0",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
