--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase": "^11.0.2",
     "lz-string": "^1.5.0",
     "next": "15.0.4",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
